# slop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  PRODUCT.md  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
src/slop/: __init__.py
src/slop/adapters/: __init__.py
src/slop/adapters/llm/: __init__.py
src/slop/adapters/storage/: __init__.py
src/slop/adapters/websocket/: __init__.py
src/slop/api/: __init__.py
src/slop/application/: __init__.py
src/slop/domain/: __init__.py  ai_personality.py  events.py  game.py  player.py  round.py  script.py  team.py
src/slop/ports/: __init__.py  llm.py  realtime.py  storage.py
tests/: __init__.py
tests/domain/: test_ai_personality.py  test_events.py  test_game.py  test_player.py  test_round.py  test_script.py  test_team.py
tests/ports/: __init__.py  test_llm.py  test_realtime.py  test_storage.py
